--- a/About.htm
+++ b/About.htm
@@ -2,7 +2,10 @@
 <html>
 <body>
 
-<h1>Bio</h1>
+ ---
+ layout: page
+ title: Bio
+ ---
 
 <p>Lorem ipsum dolor sit amet,
  consectetur adipiscing elit,
