--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 ---
 layout: page
 title: Daniel Confalone
-subtitle: This is where I will tell my friends way too much about me
 ---
+<!DOCTYPE html>
+<html>
+  <body>
+    <h2>Bio</h2>
+    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+  </body>
+</html>
