--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Daniel Confalone
         text-align: left;
       }
       igm {
-        float: left;
+        float: right;
         margin: 5px;
       }
     </style>
@@ -20,9 +20,21 @@ title: Daniel Confalone
   <body>
     <h2>Bio</h2>
     <div>
-    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
     <img src=
          "https://static.wikia.nocookie.net/starwars/images/0/0a/Battlefront_Vader.jpg/revision/latest/scale-to-width-down/1000?cb=20181211045721">
     </div>
+    <p>"Lorem ipsum dolor sit amet, 
+      consectetur adipiscing elit, 
+      sed do eiusmod tempor incididunt 
+      ut labore et dolore magna aliqua. 
+      Ut enim ad minim veniam, quis nostrud 
+      exercitation ullamco laboris nisi ut 
+      aliquip ex ea commodo consequat. 
+      Duis aute irure dolor in reprehenderit
+      in voluptate velit esse cillum dolore 
+      eu fugiat nulla pariatur. Excepteur 
+      sint occaecat cupidatat non proident, 
+      sunt in culpa qui officia deserunt mollit 
+      anim id est laborum."</p>
   </body>
 </html>
