--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ title: Daniel Confalone
   <body>
     <h2>Bio</h2>
     <div>
+    <div>
     <img src=
          "https://static.wikia.nocookie.net/starwars/images/0/0a/Battlefront_Vader.jpg/revision/latest/scale-to-width-down/1000?cb=20181211045721">
     </div>
@@ -36,5 +37,6 @@ title: Daniel Confalone
       sint occaecat cupidatat non proident, 
       sunt in culpa qui officia deserunt mollit 
       anim id est laborum."</p>
+    </div>
   </body>
 </html>
